[package]
name = "wezlix"
version = "0.4.5"
edition = "2021"
default-run = "wezlix-builder"
description = "WezTerm as a UI shell for Helix editor"

[[bin]]
name = "wezlix-builder"
path = "src/wezlix-builder.rs"

[[bin]]
name = "wezlix"
path = "src/wezlix.rs"

[dependencies]
# Command line argument parsing
clap = { version = "4.5.21", features = ["derive", "env"] }

# Recursively copy files
fs_extra = "1.3.0"

# Generate icons from SVG
resvg = { version = "0.44.0" }
tiny-skia = "0.11.4"
usvg = { version = "0.44.0", default-features = false }

# Generate info.plist
apple-bundle = "0.1.4"

# Configuration directory
xdg = "2.5.2"
home = "0.5.9"

# Deserialize configuration
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
